--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/auth": "^20.4.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.14",
+    "expo-build-properties": "^0.12.5",
     "expo-camera": "~15.0.11",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
