--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-navigation/native": "^6.0.2",
+    "email-validator": "^2.0.4",
     "expo": "~51.0.14",
     "expo-build-properties": "^0.12.5",
     "expo-camera": "~15.0.11",
@@ -37,6 +38,7 @@
     "expo-video": "^1.1.10",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.13.1",
+    "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
@@ -44,7 +46,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
